--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -1,7 +1,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="390dp"
     android:minHeight="390dp"
-    android:updatePeriodMillis="0"
+    android:updatePeriodMillis="@integer/refreshPeriodMillis"
     android:initialLayout="@layout/widget"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
