--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="-100dp">
 
         <Button
+            android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/prev_day"
@@ -26,6 +27,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/next_day"
