--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -27,6 +27,16 @@
             android:layout_weight="1"/>
 
         <Button
+            android:id="@+id/today_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/today"
+            android:textSize="25sp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/round_button"
+            android:layout_weight="1"/>
+
+        <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
