--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentTop="true"
+        android:paddingTop="32dp"
         android:layout_toEndOf="@id/widgetClockView"
         android:layout_marginStart="-100dp">
 
