--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -3,48 +3,57 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <ImageView
-            android:id="@+id/widgetClockView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"/>
+    <ImageView
+        android:id="@+id/widgetClockView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="32dp"
-        android:layout_toEndOf="@id/widgetClockView"
-        android:layout_marginStart="-100dp">
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/previous_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/prev_day"
-            android:textSize="25sp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/round_button"
-            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"/>
 
-        <Button
-            android:id="@+id/today_button"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/today"
-            android:textSize="25sp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/round_button"
-            android:layout_weight="1"/>
+            android:orientation="horizontal"
+            android:layout_weight="1">
 
-        <Button
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/next_day"
-            android:textSize="25sp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/round_button"
-            android:layout_weight="1"/>
+            <Button
+                android:id="@+id/previous_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prev_day"
+                android:textSize="25sp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/round_button"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/today_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/today"
+                android:textSize="25sp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/round_button"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/next_day"
+                android:textSize="25sp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/round_button"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
     </LinearLayout>
 
