feat: implement calendars dropdown list with checkboxes

--- a/app/src/main/res/layout/activity_widget_configuration.xml
+++ b/app/src/main/res/layout/activity_widget_configuration.xml
@@ -29,6 +29,18 @@
                 android:layout_height="wrap_content"
                 android:text="@string/use_default_color" />
         </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/calendars_chooser"/>
+        <Spinner
+            android:id="@+id/calendars_dropdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"/>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
