--- a/app/src/main/res/layout/new_configuration_layout.xml
+++ b/app/src/main/res/layout/new_configuration_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#3F4040">
+    android:background="#201F1F">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,9 +16,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="30dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
+            android:background="@drawable/round_edges_layout"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -26,29 +29,32 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="@string/calendars_chooser"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorSettingsText"
+                android:layout_gravity="center"
                 android:textSize="20sp" />
 
 
             <Spinner
                 android:id="@+id/calendars_dropdown"
-                android:layout_width="130dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="25dp"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="30dp"
+                android:layout_gravity="center"
+
                 android:background="@android:drawable/btn_dropdown"
                 android:spinnerMode="dropdown" />
 
         </LinearLayout>
 
-        <View
-            style="@style/Divider"
-            android:layout_marginTop="30dp" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_marginTop="30dp"
             android:orientation="horizontal"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
+            android:background="@drawable/round_edges_layout"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -56,55 +62,60 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="@string/colors_chooser"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorSettingsText"
                 android:layout_marginBottom="10dp"
+                android:layout_gravity="center"
+
                 android:textSize="20sp" />
 
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/calendar_color_radio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:buttonTint="@android:color/white"
+                    android:buttonTint="@color/colorSettingsText"
                     android:checked="true"
                     android:text="@string/use_calendar_color"
                     android:layout_marginEnd="10dp"
-                    android:textColor="@android:color/white" />
+                    android:textColor="@color/colorSettingsText" />
 
 
                 <RadioButton
                     android:id="@+id/default_color_radio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:buttonTint="@android:color/white"
+                    android:buttonTint="@color/colorSettingsText"
                     android:text="@string/use_default_color"
-                    android:textColor="@android:color/white" />
+                    android:textColor="@color/colorSettingsText" />
             </RadioGroup>
 
         </LinearLayout>
 
-        <View
-            style="@style/Divider"
-            android:layout_marginTop="30dp" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_marginTop="30dp"
+
             android:orientation="horizontal"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
+            android:background="@drawable/round_edges_layout"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+
                 android:text="@string/auto_update_enabled"
-                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:textColor="@color/colorSettingsText"
                 android:textSize="20sp" />
 
 
@@ -112,6 +123,7 @@
                 android:id="@+id/auto_update"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginStart="@dimen/_35sdp"
                 android:switchMinWidth="55dp" />
 
@@ -121,9 +133,13 @@
         <LinearLayout
             android:id="@+id/update_period_costumed"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_marginTop="30dp"
             android:orientation="horizontal"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
+            android:background="@drawable/round_edges_layout"
+
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -131,7 +147,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="@string/update_period_label"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorSettingsText"
+                android:layout_gravity="center"
                 android:textSize="20sp" />
 
 
@@ -141,9 +158,10 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:text="@string/update_period_default"
-                android:textColor="@android:color/white"
-                android:textColorHighlight="@android:color/white"
-                android:textColorLink="@android:color/white"
+                android:textColor="@color/colorSettingsText"
+
+                android:layout_gravity="center"
+
                 android:textSize="20sp" />
 
         </LinearLayout>
