--- a/app/src/main/res/layout/activity_widget_configuration.xml
+++ b/app/src/main/res/layout/activity_widget_configuration.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WidgetConfigurationActivity">
+    tools:context="com.opensource.roundcalendar.WidgetConfigurationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
