--- a/app/src/main/res/layout-land/new_configuration_layout.xml
+++ b/app/src/main/res/layout-land/new_configuration_layout.xml
@@ -158,6 +158,38 @@
                     android:textSize="20sp" />
             </LinearLayout>
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:layout_marginStart="7dp"
+                android:layout_marginEnd="7dp"
+                android:background="@drawable/round_edges_layout"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/widget_background_label"
+                    android:textColor="@color/colorSettingsText"
+                    android:layout_gravity="center"
+                    android:textSize="20sp" />
+
+                <SeekBar
+                    android:id="@+id/select_widget_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:max="5"
+                    android:text="@string/update_period_label"
+                    android:textColor="@color/colorSettingsText"
+                    android:layout_gravity="center"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
