--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -15,6 +15,32 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
+    <RelativeLayout
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginEnd="7dp"
+        android:layout_marginTop="7dp">
+
+        <ImageButton
+            android:id="@+id/previous_week_button"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:background="@null"
+            android:src="@drawable/ic_baseline_double_right_24" />
+
+        <ImageButton
+            android:id="@+id/next_week_button"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentLeft="true"
+            android:background="@null"
+            android:src="@drawable/ic_baseline_double_left_24" />
+    </RelativeLayout>
+
+
     <LinearLayout
         android:id="@+id/widget_center_layout"
         android:layout_width="wrap_content"
@@ -47,6 +73,7 @@
             android:layout_height="wrap_content"
            android:layout_gravity="center"
             >
+
 
             <ImageButton
                 android:id="@+id/previous_button"
@@ -87,6 +114,7 @@
             />
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -108,6 +136,8 @@
             android:textColor="#F60303"
             />
     </LinearLayout>
+
+
 
 </RelativeLayout>
 
