--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -29,7 +29,10 @@
             android:layout_height="20dp"
             android:layout_alignParentRight="true"
             android:background="@null"
-            android:src="@drawable/ic_baseline_double_right_24" />
+            android:src="@drawable/ic_baseline_double_right_24" 
+            android:foreground="@drawable/right_double_arrow_ripple"
+            android:foregroundGravity="center"
+            />
 
         <ImageButton
             android:id="@+id/next_week_button"
@@ -37,7 +40,10 @@
             android:layout_height="20dp"
             android:layout_alignParentLeft="true"
             android:background="@null"
-            android:src="@drawable/ic_baseline_double_left_24" />
+            android:src="@drawable/ic_baseline_double_left_24" 
+            android:foreground="@drawable/left_double_arrow_ripple"
+            android:foregroundGravity="center"
+            />
     </RelativeLayout>
 
 
@@ -82,6 +88,8 @@
                 android:layout_alignParentRight="true"
                 android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                 android:background="@null"
+                android:foreground="@drawable/right_arrow_ripple"
+                android:foregroundGravity="center"
                 />
 
             <ImageButton
@@ -91,6 +99,7 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_baseline_brightness_1_24"
                 android:background="@null"
+                android:foreground="@drawable/round_button_ripple"
                 />
 
             <ImageButton
@@ -100,7 +109,8 @@
                 android:layout_alignParentLeft="true"
                 android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                 android:background="@null"
-
+                android:foreground="@drawable/left_arrow_ripple"
+                android:foregroundGravity="center"
                 />
 
         </RelativeLayout>
